[gd_scene load_steps=3 format=3 uid="uid://officeview390x844"]

[ext_resource type="Script" path="res://scripts/ui/OfficeView.gd" id="1_ovscript"]

[sub_resource type="StyleBoxFlat" id="SBFlat_slot"]
bg_color            = Color(0.07, 0.07, 0.15, 1.0)
border_width_left   = 1
border_width_top    = 1
border_width_right  = 1
border_width_bottom = 1
border_color        = Color(0.18, 0.22, 0.38, 1.0)

[node name="OfficeView" type="Control"]
anchor_right  = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical   = 2
script = ExtResource("1_ovscript")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset  = 15
anchor_right    = 1.0
anchor_bottom   = 1.0
grow_horizontal = 2
grow_vertical   = 2
alignment = 1
theme_override_constants/separation = 16

[node name="TitleLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "OFFICE"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 11
theme_override_colors/font_color = Color(0.45, 0.55, 0.72, 1.0)

[node name="CenterContainer" type="CenterContainer" parent="VBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Grid" type="GridContainer" parent="VBox/CenterContainer"]
layout_mode = 2
columns = 2
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8

[node name="Slot0" type="Panel" parent="VBox/CenterContainer/Grid"]
layout_mode = 2
custom_minimum_size = Vector2(80, 80)
theme_override_styles/panel = SubResource("SBFlat_slot")

[node name="Slot1" type="Panel" parent="VBox/CenterContainer/Grid"]
layout_mode = 2
custom_minimum_size = Vector2(80, 80)
theme_override_styles/panel = SubResource("SBFlat_slot")

[node name="Slot2" type="Panel" parent="VBox/CenterContainer/Grid"]
layout_mode = 2
custom_minimum_size = Vector2(80, 80)
theme_override_styles/panel = SubResource("SBFlat_slot")

[node name="Slot3" type="Panel" parent="VBox/CenterContainer/Grid"]
layout_mode = 2
custom_minimum_size = Vector2(80, 80)
theme_override_styles/panel = SubResource("SBFlat_slot")

[node name="Slot4" type="Panel" parent="VBox/CenterContainer/Grid"]
layout_mode = 2
custom_minimum_size = Vector2(80, 80)
theme_override_styles/panel = SubResource("SBFlat_slot")

[node name="Slot5" type="Panel" parent="VBox/CenterContainer/Grid"]
layout_mode = 2
custom_minimum_size = Vector2(80, 80)
theme_override_styles/panel = SubResource("SBFlat_slot")

[node name="Slot6" type="Panel" parent="VBox/CenterContainer/Grid"]
layout_mode = 2
custom_minimum_size = Vector2(80, 80)
theme_override_styles/panel = SubResource("SBFlat_slot")

[node name="Slot7" type="Panel" parent="VBox/CenterContainer/Grid"]
layout_mode = 2
custom_minimum_size = Vector2(80, 80)
theme_override_styles/panel = SubResource("SBFlat_slot")
